# dubbo-rust

./: Cargo.toml
common/base/src/: lib.rs  typed_value.rs
protocol/base/: Cargo.toml
protocol/base/src/: invocation.rs  invoker.rs  lib.rs  rpcinvocation.rs
protocol/base/src/invocation/: converter.rs  invocation_tests.rs  mod.rs  rpc_invocation.rs  rpcinvocation.rs  service.rs
protocol/base/tests/: invocation_tests.rs
protocol/triple/src/: triple_invoker.rs
remoting/base/src/: lib.rs  message.rs
remoting/base/src/exchange/: client.rs
remoting/http/: Cargo.toml  build.rs
remoting/http/examples/: combine_triple_rest.rs  combined_triple_rest.rs
remoting/http/src/: client.rs  connect.rs  lib.rs  multiplex_service.rs  server.rs
remoting/http/src/invocation/: converter.rs  layer.rs  mod.rs  service.rs
remoting/http/src/log/: layer.rs  mod.rs  service.rs
remoting/http/src/service/: layer.rs  mod.rs
remoting/net/src/: incoming.rs  lib.rs
remoting/triple/: Cargo.toml
remoting/triple/src/: client.rs  connect.rs  lib.rs
