[package]
name = "protocol-base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dubbo-base.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "test-util", "net", "bytes"] }
dashmap.workspace = true
tower-service.workspace = true
remoting-net.workspace = true

[dev-dependencies]
tower-http = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["full"] }
http.workspace = true
futures.workspace = true
bytes.workspace = true
tokio-tower.workspace = true
