[package]
name = "remoting-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { workspace = true, features = ["client", "server", "http1", "http2"] }
hex.workspace = true
remoting-net.workspace = true
futures.workspace = true
tower = { workspace = true, features = ["util", "make"] }
tower-service.workspace = true
tokio = { workspace = true, features = [] }