[package]
name = "remoting-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { workspace = true, features = ["client", "server", "http1", "http2"] }
hex.workspace = true
remoting-net.workspace = true
remoting-base.workspace = true
protocol-base.workspace = true
futures.workspace = true
tower = { workspace = true, features = ["util", "make"] }
tower-service.workspace = true
tower-http = { workspace = true, features = ["trace","set-header"] }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
dubbo-logger.workspace = true
tonic-reflection.workspace = true

[build-dependencies]
tonic-build = { version = "0.9", features = ["prost"] }

[[example]]
name = "combine_triple_rest"
path = "examples/combined_triple_rest.rs"