[package]
name = "remoting-triple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures.workspace = true
hyper = { workspace = true, features = ["client", "server", "http2", "h2"] }
tokio.workspace = true
hex.workspace = true
http = { workspace = true }
tower = { workspace = true, features = ["make", "util"] }
remoting-net.workspace = true
remoting-base.workspace = true
tokio-util.workspace = true
